# Daedalus

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  pyproject.toml  repos.yaml
.agents/: README.md
.agents/skills/daedalus/: 00_router.md  10_context_loader.md  20_planner.md  30_coder.md  40_reviewer.md  50_tester.md  60_human_gate.md  70_resume.md
.agents/skills/test-agent/: SKILL.md
app/: main.py
app/agents/: analyzer.py  models.py
app/agents/prompts/: coder_a.txt  coder_b.txt  coder_base.txt  documenter.txt  peer_reviewer_a.txt  peer_reviewer_b.txt  reviewer_base.txt  router.txt  supervisor_planner.txt  tester.txt
app/analysis/: call_graph.py  dependency_graph.py  intelligence_cache.py  smell_detector.py
app/core/: active_repo.py  approval_registry.py  checkpoints.py  config.py  context_window.py  events.py  logging.py  memory.py  nodes.py  orchestrator.py  repo_context.py  state.py  task_routing.py  token_budget.py
app/core/nodes/: __init__.py  _context_format.py  _helpers.py  _intelligence_helpers.py  _prompt_enrichment.py  _streaming.py  coder.py  committer.py  context_loader.py  documenter.py  gates.py  intelligence.py  planner.py  planner_reviewing.py  research.py  resume.py  reviewer.py  router.py  status.py  tester.py  validation.py
app/telegram/: bot.py
app/tools/: build.py  filesystem.py  git.py  powershell.py  search.py  shell.py  static_analysis.py  terminal.py
app/web/: server.py
app/web/static/: index.html
docs/: definition-of-done.md
infra/: __init__.py  factory.py  forge.py  github_client.py  gitlab_client.py  registry.py  workspace.py
memory/: architecture-decisions.md  coding-style.md  shared-insights.md
tasks/: lessons.md  todo.md
tests/: test_approval_registry.py  test_call_graph.py  test_checkpoints.py  test_code_intelligence.py  test_coder_question.py  test_context_loader.py  test_context_window.py  test_convergence.py  test_core.py  test_dependency_graph.py  test_documenter.py  test_filesystem.py  test_forge_clients.py  test_git.py  test_human_gate.py  test_issue_entrypoint.py  test_memory.py  test_models.py  test_orchestrator.py  test_plan_approval_gate.py  test_planner_intent.py  test_powershell.py  test_pr_creation.py  test_prompt_enrichment.py  test_provenance.py  test_registry.py  test_router.py  test_search.py  test_shell.py  test_smell_detector.py  test_static_analysis.py  test_streaming.py  test_task_routing.py  test_telegram_bot.py  test_terminal.py  test_tester_env_failure.py  test_token_budget.py  test_validation.py  test_web.py  test_workspace.py
tests/fixtures/: sample_module.py  smelly_module.py
