[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daedalus"
version = "0.1.0"
description = "Local multi-agent AI coding system with LangGraph orchestration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # LLM Orchestration
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    # Telegram
    "python-telegram-bot>=21.0",
    # Config & Utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Testing & Quality
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
daedalus = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
